--- a/.gitignore
+++ b/.gitignore
@@ -48,7 +48,6 @@ desktop.ini
 config.yaml
 !config.example.yaml
 run_organizer.bat
-legacy/
 !run_organizer.example.bat
 
 # Testing
@@ -56,3 +55,6 @@ legacy/
 .coverage
 htmlcov/
 .tox/
+
+# Documentation
+ISSUES.md
